# simulink-protobuf-mcap

./: LICENSE  README.md
example/: .gitignore  BUILD.bazel  CMakeLists.txt  clean_sources.m  cmake-build.bat  cmake-clean.bat  cmake-configure.bat  cmake-test.bat  example.mat  example.slx  gather-sources.bat  generate_example_bindings.py  import-example-bindings.bat  object.m  on_save.m  refresh-dll.bat  replay_example.slx  run_example.slx  sed_strip_include_prefix.py  setup_example_writer.m  update_dirs.m  update_headers.m  update_libs.m  update_sources.m  vcpkg.json
protogen/: BUILD.bazel  cpp_generation.py  make_bus.m  matlab_helpers.py  order_busses.py  pbtools_generation.py  proto_generation.py  requirements.txt
